[package]
name = "dusk-schnorr"
version = "0.10.0-rc.0"
authors = [
  "Luke Pearson <luke@dusk.network>", "zer0 <matteo@dusk.network>",
  "Victor Lopez <victor@dusk.network>", "CPerezz <carlos@dusk.network>"
]
edition = "2021"
readme = "README.md"
repository = "https://github.com/dusk-network/schnorr"
keywords = ["cryptography", "schnorr", "zk-snarks", "zero-knowledge", "signatures"]
categories =["algorithms", "cryptography", "mathematics"]
description = "A pure-Rust implementation of Schnorr signatures with a PLONK circuit module additionally"
exclude = [
    ".gitignore",
    "Cargo.lock",
    ".github/"
]
license = "MPL-2.0"

[dependencies]
rand_core = { version = "0.6", default-features = false }
dusk-bytes = "0.1"
dusk-poseidon = { version ="0.25.0-rc", default-features = false }
dusk-pki = { version = "0.10.0-rc", default-features = false}
dusk-plonk = { version = "0.10", default-features = false }
dusk-bls12_381 = { version = "0.9", default-features = false }
dusk-jubjub = { version = "0.11", default-features = false }
canonical = { version = "0.7", optional = true }
canonical_derive = { version = "0.7", optional = true }

[dev-dependencies]
rand = "0.8"
lazy_static = "1.4"

[features]
default = ["std"]
alloc = ["dusk-bls12_381/alloc", "dusk-plonk/alloc", "dusk-poseidon/alloc"]
std = [
  "alloc",
  "dusk-poseidon/std",
  "dusk-plonk/std",
  "rand_core/std"
]
canon = [
  "canonical",
  "canonical_derive",
  "dusk-pki/canon",
  "dusk-plonk/canon"
]

[[test]]
name = "test-zk"
path = "tests/zk.rs"
required-features = ["alloc"]
