[package]
name = "dusk-schnorr"
version = "0.14.0"
authors = [
  "Luke Pearson <luke@dusk.network>", "zer0 <matteo@dusk.network>",
  "Victor Lopez <victor@dusk.network>", "CPerezz <carlos@dusk.network>"
]
edition = "2021"
readme = "README.md"
repository = "https://github.com/dusk-network/schnorr"
keywords = ["cryptography", "schnorr", "zk-snarks", "zero-knowledge", "signatures"]
categories =["algorithms", "cryptography", "mathematics"]
description = "A pure-Rust implementation of Schnorr signatures with a PLONK circuit module additionally"
exclude = [
    ".gitignore",
    "Cargo.lock",
    ".github/"
]
license = "MPL-2.0"

[dependencies]
rand_core = { version = "0.6", default-features = false }
dusk-bytes = "0.1"
dusk-poseidon = { version ="0.31", default-features = false }
dusk-pki = { version = "0.13", default-features = false}
dusk-plonk = { version = "0.16", default-features = false }
dusk-bls12_381 = { version = "0.12", default-features = false }
dusk-jubjub = { version = "0.13", default-features = false }
rkyv = { version = "0.7", optional = true, default-features = false }
bytecheck = { version = "0.6", optional = true, default-features = false }

[dev-dependencies]
rkyv = { version = "0.7", default-features = false, features = ["size_32"] }
criterion = "0.3"
rand = "0.8"
lazy_static = "1.4"
ff = { version = "0.13", default-features = false }

[[bench]]
name = "schnorr"
harness = false

[features]
default = ["std"]
alloc = ["dusk-bls12_381/alloc", "dusk-plonk/alloc", "dusk-poseidon/alloc"]
std = [
  "alloc",
  "dusk-plonk/std",
  "rand_core/std"
]
rkyv-impl = [
  "dusk-pki/rkyv-impl",
  "dusk-jubjub/rkyv-impl",
  "rkyv",
  "bytecheck",
]

[[test]]
name = "test-zk"
path = "tests/zk.rs"
required-features = ["alloc"]
