[package]
name = "dusk-schnorr"
version = "0.17.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/dusk-network/schnorr"
keywords = ["cryptography", "schnorr", "zk-snarks", "zero-knowledge", "signatures"]
categories =["algorithms", "cryptography", "mathematics"]
description = "A pure-Rust implementation of Schnorr signatures with a PLONK circuit module additionally"
exclude = [
    ".gitignore",
    "Cargo.lock",
    ".github/"
]
license = "MPL-2.0"

[dependencies]
rand_core = { version = "0.6", default-features = false }
dusk-bytes = "0.1"
dusk-poseidon = { version ="0.33", default-features = false }
dusk-plonk = { version = "0.19", default-features = false }
dusk-bls12_381 = { version = "0.13", default-features = false }
dusk-jubjub = { version = "0.14", default-features = false }
rkyv = { version = "0.7", optional = true, default-features = false }
bytecheck = { version = "0.6", optional = true, default-features = false }
ff = { version = "0.13", default-features = false }

[dev-dependencies]
rkyv = { version = "0.7", default-features = false, features = ["size_32"] }
criterion = "0.3"
rand = "0.8"
lazy_static = "1.4"

[[bench]]
name = "signature"
harness = false

[[bench]]
name = "signature_double"
harness = false
required-features = ["double"]

[[bench]]
name = "signature_var_generator"
harness = false
required-features = ["var_generator"]

[features]
default = ["std"]
alloc = ["dusk-bls12_381/alloc", "dusk-plonk/alloc", "dusk-poseidon/alloc"]
std = [
  "alloc",
  "dusk-plonk/std",
  "rand_core/std"
]
rkyv-impl = [
  "dusk-jubjub/rkyv-impl",
  "rkyv",
  "bytecheck",
]
double = []
var_generator = []

[[test]]
name = "double"
path = "tests/schnorr_double.rs"
required-features = ["double"]

[[test]]
name = "var_generator"
path = "tests/schnorr_var_generator.rs"
required-features = ["var_generator"]

[[test]]
name = "gadgets"
path = "tests/gadgets.rs"
required-features = ["alloc"]

# we use the approach from https://github.com/victe/rust-latex-doc-minimal-example
# to render latex on docs.rs
[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./katex-header.html" ]
